ziplinter/src/snapshots/ziplinter__test__relative.zip.snap
---
source: ziplinter/src/lib.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 10,
        "crc32": 4044738111,
        "creator_version": {
          "host_system": "Unix",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 25165824,
        "extra": [],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 384,
        "modified": "1980-01-01T00:00:00Z",
        "name": "../../.././tmp/relative",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 10
      },
      "local": {
        "accessed": null,
        "compressed_size": 10,
        "crc32": 4044738111,
        "created": null,
        "extra": [],
        "flags": 0,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "1980-01-01T00:00:00Z",
        "name": "../../.././tmp/relative",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 10
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 63,
        "directory_records": 1,
        "directory_size": 69,
        "disk_nbr": 0
      },
      "offset": 132
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 154,
      "start": 132
    },
    {
      "contains": "central directory header",
      "end": 132,
      "filename": "../../.././tmp/relative",
      "start": 63
    },
    {
      "contains": "local file header",
      "end": 53,
      "filename": "../../.././tmp/relative",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 63,
      "filename": "../../.././tmp/relative",
      "start": 53
    }
  ],
  "size": 154
}
