ziplinter/src/snapshots/ziplinter__test__secret.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "aex": {
          "compression_method": 8,
          "mode": 3,
          "vendor_id": 17729,
          "version_number": 1
        },
        "comment": "",
        "compressed_size": 48,
        "crc32": 706363753,
        "creator_version": {
          "host_system": "Unix",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 2175008768,
        "extra": [
          85,
          84,
          13,
          0,
          7,
          105,
          76,
          183,
          103,
          110,
          76,
          183,
          103,
          105,
          76,
          183,
          103,
          117,
          120,
          11,
          0,
          1,
          4,
          251,
          3,
          0,
          0,
          4,
          254,
          3,
          0,
          0,
          1,
          153,
          7,
          0,
          1,
          0,
          65,
          69,
          3,
          8,
          0
        ],
        "flags": 9,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Aex",
        "mode": 420,
        "modified": "2025-02-20T15:38:17Z",
        "name": "secret.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 21
      },
      "local": {
        "accessed": null,
        "aex": {
          "compression_method": 8,
          "mode": 3,
          "vendor_id": 17729,
          "version_number": 1
        },
        "aex_data": {
          "authentication_code": [
            239,
            125,
            58,
            129,
            22,
            67,
            116,
            120,
            103,
            172
          ],
          "password_verification_value": [
            139,
            195
          ],
          "salt_value": [
            208,
            65,
            55,
            57,
            99,
            172,
            10,
            181,
            7,
            39,
            127,
            9,
            250,
            42,
            14,
            27
          ]
        },
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          13,
          0,
          7,
          105,
          76,
          183,
          103,
          110,
          76,
          183,
          103,
          105,
          76,
          183,
          103,
          117,
          120,
          11,
          0,
          1,
          4,
          251,
          3,
          0,
          0,
          4,
          254,
          3,
          0,
          0,
          1,
          153,
          7,
          0,
          1,
          0,
          65,
          69,
          3,
          8,
          0
        ],
        "flags": 9,
        "gid": 1019,
        "header_offset": 0,
        "method": "Aex",
        "method_specific": "None",
        "mode": 0,
        "modified": "2025-02-20T15:38:17Z",
        "name": "secret.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": 1019,
        "uncompressed_size": 21
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 147,
        "directory_records": 1,
        "directory_size": 99,
        "disk_nbr": 0
      },
      "offset": 246
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 268,
      "start": 246
    },
    {
      "contains": "central directory header",
      "end": 246,
      "filename": "secret.txt",
      "start": 147
    },
    {
      "contains": "local file header",
      "end": 83,
      "filename": "secret.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 131,
      "filename": "secret.txt",
      "start": 83
    },
    {
      "contains": "data descriptor",
      "end": 147,
      "filename": "secret.txt",
      "start": 131
    }
  ],
  "size": 268
}
