ziplinter/src/snapshots/ziplinter__test__shift-jis.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 10,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 2176188416,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          0,
          233,
          38,
          93
        ],
        "flags": 8,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Deflate",
        "mode": 438,
        "modified": "2019-07-11T07:45:04Z",
        "name": "should-be-jis/ot_運命のワルツﾈぞなぞ小さな楽しみ遊びま.longboi",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          0,
          233,
          38,
          93
        ],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Deflate",
        "method_specific": "None",
        "mode": 0,
        "modified": "2019-07-11T07:45:04Z",
        "name": "should-be-jis/ot_ë^û╜é╠âÅâïâc╚é╝é╚é╝Å¼é│é╚èyé╡é▌ùVé╤é▄.longboi",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    },
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 1107230736,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          0,
          233,
          38,
          93
        ],
        "flags": 8,
        "header_offset": 127,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 2147484159,
        "modified": "2019-07-11T07:45:04Z",
        "name": "should-be-jis/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          0,
          233,
          38,
          93
        ],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 2147483648,
        "modified": "2019-07-11T07:45:04Z",
        "name": "should-be-jis/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "ShiftJis",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 2,
        "directory_offset": 196,
        "directory_records": 2,
        "directory_size": 186,
        "disk_nbr": 0
      },
      "offset": 382
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 404,
      "start": 382
    },
    {
      "contains": "central directory header",
      "end": 313,
      "start": 196
    },
    {
      "contains": "central directory header",
      "end": 382,
      "filename": "should-be-jis/",
      "start": 313
    },
    {
      "contains": "local file header",
      "end": 101,
      "filename": "should-be-jis/ot_運命のワルツﾈぞなぞ小さな楽しみ遊びま.longboi",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 111,
      "filename": "should-be-jis/ot_運命のワルツﾈぞなぞ小さな楽しみ遊びま.longboi",
      "start": 101
    },
    {
      "contains": "data descriptor",
      "end": 127,
      "filename": "should-be-jis/ot_運命のワルツﾈぞなぞ小さな楽しみ遊びま.longboi",
      "start": 111
    },
    {
      "contains": "local file header",
      "end": 180,
      "filename": "should-be-jis/",
      "start": 127
    },
    {
      "contains": "file data",
      "end": 180,
      "filename": "should-be-jis/",
      "start": 180
    },
    {
      "contains": "data descriptor",
      "end": 196,
      "filename": "should-be-jis/",
      "start": 180
    }
  ],
  "size": 404
}
